--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="accessibility_service_label">Прослушивание Триггеров</string>
     <string name="app_main_description">Привет!\n\nЭто приложение создано для эмуляции нажатий на экран с помощью триггеров.\nОно может не работать на всех прошивках или девайсах кроме POCO F4 GT.\nПримите это во внимание.\n\nЕсли вы считаете, что приложение должно работать на вашей прошивке или устройстве, но приложение не работает - создайте issue на GitHub странице проекта.\n\nКраткий гайд:\n- Для отображения меню настройки позиций нажатий одновременно включите 2 триггера, или один 2 раза подряд.\n- Для включения/выключения конкретного триггера, в меню настройки нажмите по нему 2 раза.\n- Верхний триггер - красный круг.\n- Нижний триггер - синий круг.</string>
-    <string name="accessibility_service_description">Прослушивает события, связанные с триггерами для последующей эмуляции нажатий.</string>
+    <string name="accessibility_service_description">Необходим для изменения настроек в зависимости от текущего открытого приложения.</string>
     <string name="root_required_title">Требуются root-права!</string>
     <string name="root_required_message">Для работы приложения необходимо разрешить приложению использовать root-права.</string>
     <string name="exit">Выйти</string>
+    <string name="overlay_channel_name">Статус оверлея</string>
+    <string name="overlay_channel_description">Уведомление о запущеном оверлея</string>
+    <string name="overlay_status_title">Оверлей запущен…</string>
+    <string name="overlay_status_desc">Игнорируй это ;)</string>
+    <string name="overlay_warn_will_not_be_saved">Вы изменяете настройки для исключённого приложения, и они не будут сохранены.\nДля изменения настроек перейдите в другое приложение.</string>
 </resources>
