Redesign of the app's menu.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_main_description">Привет!\n\nЭто приложение создано для эмуляции нажатий на экран с помощью триггеров.\nОно может не работать на всех прошивках или девайсах кроме POCO F4 GT.\nПримите это во внимание.\n\nЕсли вы считаете, что приложение должно работать на вашей прошивке или устройстве, но приложение не работает - создайте issue на GitHub странице проекта.\n\nКраткий гайд:\n- Для отображения меню настройки позиций нажатий одновременно включите 2 триггера, или один 2 раза подряд.\n- Для включения/выключения конкретного триггера, в меню настройки нажмите по нему 2 раза.\n- Верхний триггер - красный круг.\n- Нижний триггер - синий круг.</string>
+    <string name="try_again">Попробовать снова</string>
     <string name="accessibility_service_description">Необходим для изменения настроек в зависимости от текущего открытого приложения.</string>
-    <string name="root_required_title">Требуются root-права!</string>
-    <string name="root_required_message">Для работы приложения необходимо разрешить приложению использовать root-права.</string>
-    <string name="exit">Выйти</string>
     <string name="overlay_channel_name">Статус оверлея</string>
     <string name="overlay_channel_description">Уведомление о запущеном оверлея</string>
     <string name="overlay_status_title">Оверлей запущен…</string>
     <string name="overlay_status_desc">Игнорируй это ;)</string>
     <string name="overlay_warn_will_not_be_saved">Вы изменяете настройки для исключённого приложения, и они не будут сохранены.\nДля изменения настроек перейдите в другое приложение.</string>
+    <string name="app_main_warning">При первоначальной настройке в каждом приложении триггеры выключены по умолчанию!!\n\nНе забудьте включить их двойным нажатием по кругу.</string>
+    <string name="no_root_again">Root-права всё ещё не предоставлены!</string>
+    <string name="no_root_title">Root-права отсутствуют!</string>
+    <string name="no_root_text">Для работы приложения root-права обязательны!\nВыдайте приложению root-права и нажмите кнопку \"Попробовать снова\".</string>
+    <string name="welcome_title">Привет!</string>
+    <string name="welcome_text">Это приложение создано для эмуляции нажатий на экран с помощью триггеров.\nОно может не работать на всех прошивках или девайсах кроме POCO F4 GT.\nПримите это во внимание.\n\nЕсли вы считаете, что приложение должно работать на вашей прошивке или устройстве, но приложение не работает - создайте issue на GitHub странице проекта.</string>
+    <string name="continue_button">Продолжить</string>
+    <string name="faq_aservice_title">Служба специальных возможностей</string>
+    <string name="faq_daemon_description">C++‑бинарник, запускаемый на устройстве, который:\n| Блокирует прямую передачу событий нажатий на экран в ОС, перехватывая их для модификации.\n| Отслеживает аппаратные триггеры и при их нажатии/отпускании эмулирует соответствующие касания с помощью виртуального uinput‑устройства.\n| Запускает внутренний сервер, для получения настроек от клиента.\n\nЕсли кнопка горит красным, то создайте issue в репозитории проекта.</string>
+    <string name="faq_daemon_client_description">Класс для отправки настроек демону.\n\nОн будет работать после открытия любого приложения, кроме этого и только если демон и accessibility service работают исправно.</string>
+    <string name="faq_aservice_description">Предназначен для отслеживания текущих открытых приложений, т.е для работы настроек под каждое приложение.\n\nЕсли он кнопка красная, то попробуйте выполнить следующие шаги:\n- Выйдите из приложения.\n- Откройте настройки и найдите приложение.\n- Нажмите \"Принудительно закрыть\".\n- Зайдите в приложение.</string>
+    <string name="status_button_daemon">Демон</string>
+    <string name="status_button_socket">Клиент</string>
+    <string name="status_button_accessibility">Служба спец. возм.</string>
+    <string name="faq_daemon_title">Демон (ака. Сервер)</string>
+    <string name="faq_daemon_client_title">Клиент</string>\
 </resources>
